# made-in-uk

./: .env.tmp  .gitignore  .prettierrc.cjs  Dockerfile.firebase  README.md  docker-compose-demo.yml  docker-compose.yml  eslint.config.js  lerna.json  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  verify-pr.yml
.husky/: pre-push
scripts/: deploy.sh  dev.sh  setup.sh  test.sh
systems/api/: .lintstagedrc.mjs  Dockerfile  nest-cli.json  package-lock.json  package.json  schema.graphql  tsconfig.json  vite.config.ts
systems/api/scripts/: build.sh  dev-server.sh  (+2 more)
systems/background-product-detail/: Dockerfile  eslint.config.js  package-lock.json  package.json  vite.config.ts
systems/background-product-search/: Dockerfile  package-lock.json  package.json  vite.config.ts
systems/infrastructure/: Dockerfile  Pulumi.development.yaml  Pulumi.local.yaml  Pulumi.test.yaml  Pulumi.yaml  babel.config.json  eslint.config.js  package-lock.json  package.json
systems/llm/: .gitattributes  .gitignore  Dockerfile  package.json  pyproject.toml
systems/llm/gpt4all/: Phi-3-mini-4k-instruct.Q4_0.gguf
systems/llm/scripts/ci/: deploy.sh  setup.sh  test.sh
systems/llm/scripts/docker/: health-check.sh  setup.sh  start.sh
systems/llm/src/llm/: app_logging.py  database.py  llm_engine.py  main.py  pre_load_modal.py
systems/web/: .gitignore  .lintstagedrc.mjs  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  remix.config.js  remix.env.d.ts  tailwind.config.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+228 files in other folders)
